# py-mclustR

./: .gitignore  README.md  pyproject.toml
examples/: _build_notebooks.py  comparison_R_vs_python.html  comparison_R_vs_python.ipynb  quickstart.py
mclust_py/: __init__.py  anndata_adapter.py  bic.py  control.py  density.py  em.py  hc.py  mclust.py  models.py
tests/: r_parity_compare.py  r_parity_dump.R  test_r_parity.py  test_smoke.py
